--- a/layouts/video/single.html
+++ b/layouts/video/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="page-single_default mx-auto min-h-screen">
+  <article class="page-single_default mx-auto min-h-screen text-gray-800">
     <div class="mb-16">
       {{ partial "page-description.html" . }}
     </div>
