--- a/layouts/showcase/single.html
+++ b/layouts/showcase/single.html
@@ -10,7 +10,17 @@
           {{ end }}
         </aside>
       {{ end }}
-      {{- partial "_components/image-picture-element.html" . -}}
+      {{/*  BEGIN: Temp replacement for picture element {{- partial "_components/image-picture-element.html" . -}}  */}}
+      {{ $image := index (.Params.images) 0 }}
+      {{ with $image }}
+      {{ if in (print $.Site.BaseURL) "localhost" }}
+        <img data-src="{{ . }}" src="/images/placeholder.svg" class="lazyload mw-full">
+      {{ else }}
+        {{ $img := replace . "/uploads" ($.Param "dev.image_url")  }}
+        <img src="/images/placeholder.svg" data-src="{{ $img }}?{{ (querify "w" "1200" "h" "675" "fit" "crop" "auto" "format") | safeURL }}" class="lazyload max-w-full">
+      {{ end }}
+    {{ end }}
+    {{/*  END  */}}
     <aside class="py-4 border-b text-base text-grey-darkest">
       <p class="mb-4">
         {{ with .Params.website -}}
